--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <div class="example-project" id="example-project">
         <div class="example-project-text">
             <h3>ONE OF MY PROJECTS</h3>
+            <p><b>(More to come in the future!)</b></p>
             <p>This is one of my recent school projects. It is a calendar view of the month of November with a connected To-Do list. I built this in HTML, CSS and JavaScript along with two classmates. I stood for the majority of the design and interface.</p>
             <img src="./Images/calendar-img.jpg" alt="">
         </div>
